@@ -1,5 +1,13 @@
 2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* lib/am/java.am (class%DIR%.stamp): Don't run $(JAVAC) when there
+	is no file to compile.
+	* tests/java2.test: New file.
+	* tests/Makefile.am (TESTS): Add java2.test.
+	Reported by Braden N. McDaniel.
+
+2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* tests/maintclean.test: Don't check for autom4te.cache if
 	it's not created by Autoconf.
 	Reported by Bernd Jendrissek.
